--- a/src/components/navBar/NavStyles.module.css
+++ b/src/components/navBar/NavStyles.module.css
@@ -1,6 +1,9 @@
 .nav {
 	display: flex;
 	justify-content: center;
+	background-color: black;
+	margin: 0;
+	padding: 0;
 }
 
 .navList {
@@ -9,4 +12,11 @@
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	color: white;
+}
+
+.hover:hover {
+	color: black;
+	background-color: white;
+	cursor: pointer;
 }
