--- a/src/components/navBar/NavStyles.module.css
+++ b/src/components/navBar/NavStyles.module.css
@@ -2,19 +2,19 @@
 	display: flex;
 	justify-content: center;
 	background-color: black;
-	margin: 0;
-	padding: 0;
 }
 
 .navList {
 	display: flex;
 	gap: 1rem;
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	color: white;
 }
-
+.hover {
+	text-decoration: none;
+	color: white;
+	font-weight: 700;
+	padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+}
 .hover:hover {
 	color: black;
 	background-color: white;
