got data from api / display on screen

--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -5,9 +5,8 @@
 }
 
 .logoPlaceholder {
-	background-color: grey;
-	height: 40px;
-	width: 90px;
+	height: 30px;
+	width: auto;
 }
 
 .searchContainer {
