add individual product view page

--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -4,7 +4,7 @@
 	justify-content: space-around;
 }
 
-.logoPlaceholder {
+.logo {
 	height: 30px;
 	width: auto;
 }
@@ -82,6 +82,7 @@
 	position: absolute;
 	width: 1px;
 }
+
 /* 
 
 .searchIcon {
