--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -1,19 +1,22 @@
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-	gap: 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	margin: 1rem;
+	gap: 1rem;
 }
 
 .product {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	border: black 1px solid;
 	border-radius: 5px;
 	padding: 1rem;
+	text-decoration: none;
+	color: black;
 }
-
+.rating {
+	display: flex;
+	align-items: center;
+}
 .product img {
-	width: 200px;
-	height: 200px;
 }
