--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -1,6 +1,6 @@
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 	margin: 1rem;
 	gap: 1rem;
 }
@@ -11,6 +11,7 @@
 	border: black 1px solid;
 	border-radius: 5px;
 	padding: 1rem;
+	height: 35rem;
 	text-decoration: none;
 	color: black;
 }
@@ -19,4 +20,7 @@
 	align-items: center;
 }
 .product img {
+	height: 60%;
+	width: auto;
+	object-fit: contain;
 }
