--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -4,23 +4,40 @@
 	margin: 1rem;
 	gap: 1rem;
 }
-
+.product img {
+	height: 70%;
+	width: auto;
+	object-fit: contain;
+}
 .product {
 	display: flex;
+	position: relative;
 	flex-direction: column;
-	border: black 1px solid;
-	border-radius: 5px;
+	border: black solid 1px;
+	border-radius: 4px;
 	padding: 1rem;
 	height: 35rem;
 	text-decoration: none;
+	justify-content: space-evenly;
 	color: black;
 }
 .rating {
 	display: flex;
 	align-items: center;
 }
-.product img {
-	height: 60%;
-	width: auto;
-	object-fit: contain;
+
+.favBtn {
+	position: absolute;
+	margin: 0.5rem;
+	right: 0;
+	bottom: 0;
+}
+
+.favBtn:hover {
+	scale: 1.2;
+	transition: 0.3s;
+}
+
+.product h2 {
+	font-size: 1rem;
 }
