--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: space-evenly;
 	gap: 1rem;
-	padding: 0rem 1rem 0rem 1rem;
+	padding: 1rem;
 }
 
 .logo {
@@ -21,7 +21,6 @@
 	align-items: center;
 	gap: 2rem;
 	width: 700px;
-	padding: 1rem 0 1rem 1rem;
 }
 .search {
 	flex: 1;
@@ -45,6 +44,20 @@
 	cursor: pointer;
 }
 
+.checkoutButton {
+	composes: button;
+	position: static;
+	background-color: rgb(177, 214, 214);
+	padding: 0.25rem 1.5rem 0.25rem 1.5rem;
+	border-radius: 15px;
+	color: white;
+	font-weight: 600;
+}
+
+.mobileSearchBtn {
+	visibility: hidden;
+}
+
 .checkoutContainer {
 	display: grid;
 	grid-auto-flow: column;
@@ -65,15 +78,6 @@
 	font-size: 16px;
 }
 
-.checkoutButton {
-	composes: button;
-	position: static;
-	background-color: rgb(177, 214, 214);
-	padding: 0.25rem 1.5rem 0.25rem 1.5rem;
-	border-radius: 15px;
-	color: white;
-	font-weight: 600;
-}
 .visuallyhidden {
 	border: 0;
 	clip: rect(0 0 0 0);
@@ -96,11 +100,15 @@
 	}
 
 	.logo {
-		height: 25px;
+		height: 20px;
 	}
 
 	.checkoutContainer {
 		gap: 0.25rem;
+	}
+
+	.mobileSearchBtn {
+		visibility: visible;
 	}
 }
 /* 
