--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -1,7 +1,21 @@
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	text-align: start;
+}
+.container h1 {
+	width: 80dvw;
+	padding: 1rem 1rem 1rem 0rem;
+}
+
 .grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	margin: 1rem;
+	justify-content: center;
+	width: 80dvw;
+	margin: 0rem 1rem 1rem 1rem;
 	gap: 1rem;
 }
 .product img {
@@ -13,13 +27,13 @@
 	display: flex;
 	position: relative;
 	flex-direction: column;
-	border: black solid 1px;
-	border-radius: 4px;
 	padding: 1rem;
 	height: 35rem;
 	text-decoration: none;
 	justify-content: space-evenly;
+	border-radius: 5px;
 	color: black;
+	box-shadow: 0px 5px 10px #888888;
 }
 .rating {
 	display: flex;
