--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -2,7 +2,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
-	gap: 1rem;
 	padding: 1rem;
 }
 
@@ -89,10 +88,6 @@
 	width: 1px;
 }
 @media only screen and (max-width: 600px) {
-	.menu {
-		visibility: visible;
-	}
-
 	.search,
 	.checkoutButton,
 	.searchContainer {
@@ -107,7 +102,8 @@
 		gap: 0.25rem;
 	}
 
-	.mobileSearchBtn {
+	.mobileSearchBtn,
+	.menu {
 		visibility: visible;
 	}
 }
