--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -2,19 +2,18 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 	text-align: start;
 }
 .container h1 {
-	width: 80dvw;
+	width: 60dvw;
 	padding: 1rem 1rem 1rem 0rem;
 }
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	justify-content: center;
-	width: 80dvw;
+	width: 60dvw;
 	margin: 0rem 2rem 2rem 2rem;
 	gap: 1rem;
 }
@@ -27,10 +26,11 @@
 	display: flex;
 	position: relative;
 	flex-direction: column;
-	padding: 1rem;
-	height: 35rem;
+	justify-content: space-e;
+	padding: 2rem;
+	height: 30rem;
+	gap: 1rem;
 	text-decoration: none;
-	justify-content: space-evenly;
 	border-radius: 5px;
 	color: black;
 	box-shadow: 0px 5px 10px #888888;
@@ -38,6 +38,9 @@
 .rating {
 	display: flex;
 	align-items: center;
+}
+.rating div {
+	flex: 1;
 }
 
 .favBtn {
@@ -53,5 +56,5 @@
 }
 
 .product h2 {
-	font-size: 1rem;
+	font-size: 0.85rem;
 }
