--- a/src/components/imgSlider/ImgSlider.module.css
+++ b/src/components/imgSlider/ImgSlider.module.css
@@ -2,8 +2,8 @@
 	display: flex;
 	align-items: center;
 	position: relative;
-	width: 65dvw;
-	height: 65dvh;
+	max-width: 65dvw;
+	max-height: 65dvh;
 	overflow: hidden;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .imageContainer img {
-	object-fit: scale-down;
+	object-fit: fill;
 }
 
 .navBtn:hover {
