--- a/src/components/navBar/NavStyles.module.css
+++ b/src/components/navBar/NavStyles.module.css
@@ -23,7 +23,29 @@
 }
 
 @media only screen and (max-width: 600px) {
+	.nav,
+	.inactive {
+		position: absolute;
+		transition: 0.3s;
+		z-index: 1;
+		padding: 1rem;
+		border-top-right-radius: 1rem;
+		border-bottom-right-radius: 1rem;
+		height: 100%;
+	}
 	.nav {
-		display: none;
+		translate: 0%;
+	}
+
+	.inactive {
+		translate: -100%;
+	}
+
+	.navList {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		list-style-type: none;
+		padding: 0;
 	}
 }
