--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -26,7 +26,6 @@
 	display: flex;
 	position: relative;
 	flex-direction: column;
-	justify-content: space-e;
 	padding: 2rem;
 	height: 30rem;
 	gap: 1rem;
@@ -57,4 +56,18 @@
 
 .product h2 {
 	font-size: 0.85rem;
+}
+
+@media only screen and (max-width: 600px) {
+	.grid {
+		grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+		width: 100%;
+		margin: 0;
+		gap: 0;
+	}
+
+	.rating {
+		display: flex;
+		align-items: center;
+	}
 }
