--- a/src/components/homePage/Home.module.css
+++ b/src/components/homePage/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+	margin: 2rem 0rem 2rem 0rem;
 	display: flex;
 	justify-content: center;
 	text-align: start;
@@ -21,6 +22,33 @@
 }
 
 .bottomBanner {
+	position: relative;
 	height: 320px;
 	overflow: hidden;
+}
+.imgsInContainer {
+	position: relative;
+}
+.imgText {
+	position: absolute;
+	width: 100%;
+	padding: 1rem;
+	bottom: 0;
+
+	background: linear-gradient(
+		360deg,
+		rgba(0, 0, 0, 0.75),
+		rgba(0, 0, 0, 0.6),
+		rgba(0, 0, 0, 0.5),
+		rgba(0, 0, 0, 0.25),
+		rgba(255, 255, 255, 0)
+	);
+}
+
+.imgText > * {
+	color: white;
+}
+
+.imgText h2 {
+	font-size: 1rem;
 }
