--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -35,11 +35,10 @@
 	box-shadow: 0px 5px 10px #888888;
 }
 .rating {
-	display: flex;
-	align-items: center;
-}
-.rating div {
-	flex: 1;
+	display: inline-block;
+	margin-right: 3rem;
+	width: max-content;
+	vertical-align: middle;
 }
 
 .favBtn {
