--- a/src/components/productDetails/Productdetails.module.css
+++ b/src/components/productDetails/Productdetails.module.css
@@ -11,6 +11,7 @@
 	align-items: center;
 	gap: 5rem;
 	max-width: 65dvw;
+	padding: 2rem;
 }
 
 .productInfo {
@@ -42,10 +43,13 @@
 	width: 50%;
 	padding: 0.25rem;
 	border: none;
-	background-color: rgb(177, 214, 214);
+	background-color: rgb(48, 122, 116);
 	border-radius: 15px;
 	color: white;
 	font-weight: 500;
+}
+.button:hover {
+	background-color: rgb(33, 85, 81);
 }
 
 .favourite {
@@ -53,6 +57,10 @@
 	border: black solid 1px;
 	background-color: rgb(255, 255, 255);
 	color: black;
+}
+
+.favourite:hover {
+	background-color: rgb(255, 255, 255);
 }
 
 .favourite p {
