--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -43,14 +43,25 @@
 	cursor: pointer;
 }
 
+.menu {
+	composes: button;
+	position: static;
+	visibility: hidden;
+}
+
 .checkoutButton {
 	composes: button;
 	position: static;
-	background-color: rgb(177, 214, 214);
+	background-color: rgb(48, 122, 116);
+
 	padding: 0.25rem 1.5rem 0.25rem 1.5rem;
 	border-radius: 15px;
 	color: white;
 	font-weight: 600;
+}
+
+.checkoutButton:hover {
+	background-color: rgb(33, 85, 81);
 }
 
 .mobileSearchBtn {
@@ -86,6 +97,7 @@
 	position: absolute;
 	width: 1px;
 }
+
 @media only screen and (max-width: 600px) {
 	.search,
 	.checkoutButton,
