--- a/src/components/productDetails/Productdetails.module.css
+++ b/src/components/productDetails/Productdetails.module.css
@@ -38,16 +38,18 @@
 .button {
 	cursor: pointer;
 	display: flex;
-	align-items: center;
 	justify-content: center;
+	align-self: center;
 	width: 50%;
 	padding: 0.25rem;
+	gap: 0.5rem;
 	border: none;
 	background-color: rgb(48, 122, 116);
 	border-radius: 15px;
 	color: white;
 	font-weight: 500;
 }
+
 .button:hover {
 	background-color: rgb(33, 85, 81);
 }
