--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -74,6 +74,10 @@
 	gap: 1rem;
 	align-items: center;
 }
+
+.checkoutContainer * {
+	cursor: pointer;
+}
 .basket {
 	display: flex;
 	align-items: center;
@@ -96,6 +100,17 @@
 	padding: 0;
 	position: absolute;
 	width: 1px;
+}
+
+.faveouriteBtn {
+	composes: checkoutContainer;
+	position: relative;
+}
+
+.faveIndicator {
+	position: absolute;
+	right: 0;
+	bottom: 60%;
 }
 
 @media only screen and (max-width: 600px) {
