--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -24,7 +24,6 @@
 }
 .product {
 	display: flex;
-	position: relative;
 	flex-direction: column;
 	padding: 2rem;
 	height: 30rem;
@@ -33,6 +32,7 @@
 	border-radius: 5px;
 	color: black;
 	box-shadow: 0px 5px 10px #888888;
+	z-index: 0;
 }
 .rating {
 	display: inline-block;
@@ -42,6 +42,9 @@
 }
 
 .favBtn {
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0);
+	border: none;
 	position: absolute;
 	margin: 0.5rem;
 	right: 0;
@@ -55,6 +58,10 @@
 
 .product h2 {
 	font-size: 0.85rem;
+}
+
+.productContainer {
+	position: relative;
 }
 
 @media only screen and (max-width: 600px) {
