--- a/src/components/searchBar/SearchBarStyles.module.css
+++ b/src/components/searchBar/SearchBarStyles.module.css
@@ -34,7 +34,7 @@
 .search:hover {
 	background-color: white;
 }
-.button {
+.searchBtn {
 	position: absolute;
 	display: flex;
 	right: 1px;
@@ -44,16 +44,21 @@
 }
 
 .menu {
-	composes: button;
+	composes: searchBtn;
 	position: static;
 	visibility: hidden;
 }
+.checkoutContainer * {
+	display: flex;
+	background-color: rgba(0, 0, 0, 0);
 
+	border: none;
+	cursor: pointer;
+}
 .checkoutButton {
-	composes: button;
+	composes: searchBtn;
 	position: static;
 	background-color: rgb(48, 122, 116);
-
 	padding: 0.25rem 1.5rem 0.25rem 1.5rem;
 	border-radius: 15px;
 	color: white;
@@ -71,13 +76,10 @@
 .checkoutContainer {
 	display: grid;
 	grid-auto-flow: column;
-	gap: 1rem;
+	gap: 0.5rem;
 	align-items: center;
 }
 
-.checkoutContainer * {
-	cursor: pointer;
-}
 .basket {
 	display: flex;
 	align-items: center;
