--- a/src/components/navBar/MobileNav.module.css
+++ b/src/components/navBar/MobileNav.module.css
@@ -22,8 +22,28 @@
 	cursor: pointer;
 }
 
-@media only screen and (max-width: 600px) {
-	.nav {
-		display: none;
-	}
+.nav,
+.inactive {
+	position: absolute;
+	transition: 0.3s;
+	z-index: 2;
+	padding: 1rem;
+	border-top-right-radius: 1rem;
+	border-bottom-right-radius: 1rem;
+	height: 100%;
+}
+.nav {
+	translate: 0%;
+}
+
+.inactive {
+	translate: -100%;
+}
+
+.navList {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	list-style-type: none;
+	padding: 0;
 }
