--- a/src/components/navBar/NavStyles.module.css
+++ b/src/components/navBar/NavStyles.module.css
@@ -24,6 +24,22 @@
 
 @media only screen and (max-width: 600px) {
 	.nav {
-		display: none;
+		position: absolute;
+		transition: 0.3s;
+		z-index: 2;
+		padding: 1rem;
+		border-top-right-radius: 1rem;
+		border-bottom-right-radius: 1rem;
+		height: 100dvh;
+	}
+	.navList {
+		flex-direction: column;
+	}
+	.inactive {
+		translate: -100%;
+	}
+
+	.active {
+		translate: 0%;
 	}
 }
