--- a/src/components/favourites/FaveStyles.module.css
+++ b/src/components/favourites/FaveStyles.module.css
@@ -14,29 +14,73 @@
 	justify-content: space-around;
 	height: 100%;
 }
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 2rem;
+	width: 65dvw;
+	overflow: hidden;
+}
 
 .item {
+	--gap: 2rem;
+	--line-thickness: 2px;
+	--line-colour: #979797;
+	--line-offset: calc(var(--gap) / 2);
+
+	position: relative;
 	display: flex;
 	align-items: center;
 	gap: 2rem;
 	padding: 2rem;
-	gap: 1.5rem;
 	text-decoration: none;
-	border-radius: 5px;
 	color: black;
-	box-shadow: 0px 5px 10px #888888;
+}
+
+.item::after,
+.item::before {
+	content: "";
+	background-color: var(--line-colour);
+	position: absolute;
+}
+
+.item::after {
+	width: 100vw;
+	height: var(--line-thickness);
+	top: calc(var(--line-offset) * -1);
+	left: 0;
+}
+
+.item::before {
+	width: var(--line-thickness);
+	height: 150vh;
+	top: 0;
+	left: calc(var(--line-offset) * -1);
 }
 
 .imgContainer {
 	width: 50%;
 	height: auto;
 }
+.buttons {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	margin: 1rem;
+}
+.buttons button {
+	background-color: rgb(48, 122, 116);
+	padding: 0.25rem 1.5rem 0.25rem 1.5rem;
+	width: 130px;
+	font-size: 0.9rem;
+	border-radius: 15px;
+	color: white;
+	border: none;
+	cursor: pointer;
+}
 
-.grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	gap: 2rem;
-	width: 65dvw;
+.buttons button:hover {
+	background-color: rgb(33, 85, 81);
 }
 
 @media only screen and (max-width: 600px) {
