--- a/src/components/productGrid/GridStyles.module.css
+++ b/src/components/productGrid/GridStyles.module.css
@@ -12,26 +12,54 @@
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	justify-content: center;
 	width: 65dvw;
+	gap: 2rem;
 	margin: 0rem 2rem 2rem 2rem;
-	gap: 1rem;
+	overflow: hidden;
+}
+.product {
+	--gap: 2rem;
+	--line-thickness: 2px;
+	--line-colour: #979797;
+	--line-offset: calc(var(--gap) / 2);
+
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
+	height: 30rem;
+	gap: 2rem;
+	text-decoration: none;
+	border-radius: 5px;
+	color: black;
+	z-index: 0;
+}
+
+.product::after,
+.product::before {
+	content: "";
+	background-color: var(--line-colour);
+	position: absolute;
+}
+
+.product::after {
+	width: 100vw;
+	height: var(--line-thickness);
+	top: calc(var(--line-offset) * -1);
+	left: 0;
+}
+
+.product::before {
+	width: var(--line-thickness);
+	height: 150vh;
+	top: 0;
+	left: calc(var(--line-offset) * -1);
 }
 .product img {
 	height: 70%;
 	width: auto;
 	object-fit: contain;
 }
-.product {
-	display: flex;
-	flex-direction: column;
-	padding: 2rem;
-	height: 30rem;
-	gap: 1.5rem;
-	text-decoration: none;
-	border-radius: 5px;
-	color: black;
-	box-shadow: 0px 5px 10px #888888;
-	z-index: 0;
-}
+
 .rating {
 	display: inline-block;
 	margin-right: 4rem;
@@ -64,10 +92,8 @@
 
 @media only screen and (max-width: 600px) {
 	.grid {
-		grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 		width: 100%;
 		margin: 0;
-		gap: 0;
 	}
 
 	.container {
